# src/main/java/org/laioffer/planner/model/itinerary/ItinerarySummaryDTO.java
@@ -1,0 +1,81 @@
+package org.laioffer.planner.model.itinerary;
+
+import com.fasterxml.jackson.annotation.JsonFormat;
+
+import java.time.OffsetDateTime;
+import java.util.UUID;
+
+public class ItinerarySummaryDTO {
+    private UUID id;
+    private String destinationCity;
+
+    @JsonFormat(pattern = "yyyy-MM-dd'T'HH:mm:ssXXX")
+    private OffsetDateTime startDate;
+
+    @JsonFormat(pattern = "yyyy-MM-dd'T'HH:mm:ssXXX")
+    private OffsetDateTime endDate;
+
+    private TravelMode travelMode;
+
+    public ItinerarySummaryDTO() {}
+
+    public ItinerarySummaryDTO(UUID id, String destinationCity, OffsetDateTime startDate,
+                              OffsetDateTime endDate, TravelMode travelMode) {
+        this.id = id;
+        this.destinationCity = destinationCity;
+        this.startDate = startDate;
+        this.endDate = endDate;
+        this.travelMode = travelMode;
+    }
+
+    public UUID getId() {
+        return id;
+    }
+
+    public void setId(UUID id) {
+        this.id = id;
+    }
+
+    public String getDestinationCity() {
+        return destinationCity;
+    }
+
+    public void setDestinationCity(String destinationCity) {
+        this.destinationCity = destinationCity;
+    }
+
+    public OffsetDateTime getStartDate() {
+        return startDate;
+    }
+
+    public void setStartDate(OffsetDateTime startDate) {
+        this.startDate = startDate;
+    }
+
+    public OffsetDateTime getEndDate() {
+        return endDate;
+    }
+
+    public void setEndDate(OffsetDateTime endDate) {
+        this.endDate = endDate;
+    }
+
+    public TravelMode getTravelMode() {
+        return travelMode;
+    }
+
+    public void setTravelMode(TravelMode travelMode) {
+        this.travelMode = travelMode;
+    }
+
+    @Override
+    public String toString() {
+        return "ItinerarySummaryDTO{" +
+                "id=" + id +
+                ", destinationCity='" + destinationCity + '\'' +
+                ", startDate=" + startDate +
+                ", endDate=" + endDate +
+                ", travelMode=" + travelMode +
+                '}';
+    }
+}
